# NCNN_ObjectDetection

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ironsublimate/ncnn_objectdetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov4-tiny-opt.param  yolox-nano.param  yolox_s-int8.param  yolox_s.param
app/src/main/java/com/ironsublimate/ncnn_objectdetection/: MainActivity.java  MobilenetSSDNcnn.java  NCNNDetector.java  NanoDet.java  Obj.java  Overlay.java  SettingsActivity.java  YOLOv4Tiny.java  YoloV5Ncnn.java  YoloX.java  YoloxInt8.java
app/src/main/jni/: CMakeLists.txt  NCNN_detector_public_jni.cpp  NanoDet_jni.cpp  YoloV5Focus.h  mobilenetssdncnn_jni.cpp  yolov4_tiny_jni.cpp  yolov5ncnn_jni.cpp  yolox_jni.cpp  yolox_s-int8_jni.cpp
app/src/main/res/drawable/: press_bg_trans_f2f2f2.xml
app/src/main/res/layout/: activity_main.xml  drawer_left.xml  settings_activity.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/ironsublimate/ncnn_objectdetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
